loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:2: error: value AND is not a member of Boolean
while (estFaceMur()==false AND i<10){
                           ^