loopwhile.LoopWhile.scala.code
var i: Int=0
while (estFaceMur()==false AND i<10){
  avance()

  i=i+1
  
}